# cube-of-life

./: .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE.txt  README.md
android-project/: AndroidManifest.xml  build.xml  local.properties
android-project/jni/: Application.mk  SDL
android-project/jni/src/: Android.mk
android-project/res/values/: strings.xml
android-project/src/com/chaoshade/cube_spinner/: CubeSpinner.java
src/: SDL_handle.cc  SDL_handle.h  cube.cc  enumerations.h  event_handler.cc  event_handler.h  graphics.cc  graphics.cc.bak  graphics.h  main.cc  settings.h
src/graphics/: camera.cc  camera.h  graphics_handler.cc  graphics_handler.h  graphics_util.cc  graphics_util.h  perspective.cc  perspective.h
src/graphics/objects/: cube.cc  cube.h  drawable.cc  drawable.h  triangle.cc  triangle.h
src/util/: graphics.cc  graphics.h  math.h  math_eigen.h  window.h
